retroflag safe shutdown: enable/disable via RetroArch
- retroflag_picase_safeshutdown
  - remove copy service (is copied automatically)
  - enable the service
  - start the service only when specific files exists
- RPi3/4/5: add RetroArch patch that adds menu item under Settings ->
  Services to enable/disable the service
- retroarch: enable HAVE_RETROFLAG for RPi3/4/5

--- a/packages/lakka/lakka_tools/retroflag_picase_safeshutdown/system.d/retroflag_picase_safeshutdown.service
+++ b/packages/lakka/lakka_tools/retroflag_picase_safeshutdown/system.d/retroflag_picase_safeshutdown.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=RETROFLAG Pi CASE series - safe shutdown service
+ConditionPathExists=|/storage/.cache/services/safeshutdown.conf
 
 [Service]
 ExecStart=/usr/bin/retroflag_picase_safeshutdown.py
