--- a/projects/L4T/devices/Switch/packages/pulseaudio/system.d/pulseaudio.service
+++ b/projects/L4T/devices/Switch/packages/pulseaudio/system.d/pulseaudio.service
@@ -5,11 +5,10 @@ After=syslog.target local-fs.target
 [Service]
 Type=dbus
 BusName=org.pulseaudio.Server
-ExecStartPre=/bin/rm -rf /storage/.config/pulse/*
 ExecStart=/usr/bin/pulseaudio --system --disallow-exit --exit-idle-time=-1 --disable-shm --enable-memfd --realtime
 Restart=on-failure
-Environment=PULSE_STATE_PATH=/storage/.config/pulse
-Environment=PULSE_CONFIG_PATH=/storage/.config/pulse
+Environment=PULSE_STATE_PATH=/run/pulse
+Environment=PULSE_CONFIG_PATH=/run/pulse
 
 [Install]
 WantedBy=multi-user.target
